--- a/feo-parser/Cargo.toml
+++ b/feo-parser/Cargo.toml
@@ -6,3 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+bnum = { version = "0.10.0", features = ["numtraits"] }
+thiserror = "1"
+feo-types = { path = "../feo-types" }
+feo-error = { path = "../feo-error" }
