--- a/feo-types/Cargo.toml
+++ b/feo-types/Cargo.toml
@@ -6,3 +6,5 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+bnum = { version = "0.10.0", features = ["numtraits"] }
+thiserror = "1"
