--- a/feo-types/Cargo.toml
+++ b/feo-types/Cargo.toml
@@ -1,8 +1,10 @@
 [package]
-name = "feo"
+name = "feo-types"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+bnum = { version = "0.10", features = ["numtraits"] }
+
